// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr-hello-world build custom port should generate a production server running on custom port 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4000/main-fadb2269a374a06075a5.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/vendors~main-a8e117066fe0a6dafc9a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/main-7af3fc9aa1bc97e1b3a1.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:4000/543503d0f8691e33cdf9a03512ad717a.png">
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/vendors~main-a8e117066fe0a6dafc9a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/main-7af3fc9aa1bc97e1b3a1.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world build default port should generate a production server based on config 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4000/main-fadb2269a374a06075a5.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/vendors~main-a8e117066fe0a6dafc9a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4000/main-7af3fc9aa1bc97e1b3a1.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:4000/543503d0f8691e33cdf9a03512ad717a.png">
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/vendors~main-a8e117066fe0a6dafc9a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4000/main-7af3fc9aa1bc97e1b3a1.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world start should start a development server 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:8100/main.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:8100/runtime.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:8100/vendors~main.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:8100/main.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___1brbpTo">
        <div class="lessStyles__nested___3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:8100/543503d0f8691e33cdf9a03512ad717a.png">
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:8100/runtime.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:8100/vendors~main.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:8100/main.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
